added reset.css, background color to style.css and site logo to index.html

--- a/foundation/stylesheets/app/app.css
+++ b/foundation/stylesheets/app/app.css
@@ -12,6 +12,11 @@
 /* -----------------------------------------
    Shared Styles
 ----------------------------------------- */
+body {
+  font-family: 'Ubuntu' sans-serif;
+  background: #000000;
+}
+
 
 
 
