--- a/foundation/stylesheets/app/app.css
+++ b/foundation/stylesheets/app/app.css
@@ -17,7 +17,21 @@ body {
   background: #000000;
 }
 
+.slider {
+  margin: 0 0 25px 0;
+}
 
+.four.columns {
+  color: #fff;
+}
+
+.four.columns h4 {
+  color: #fff;
+}
+
+.six.columns {
+  color: #fff;
+}
 
 
 /* -----------------------------------------
