--- a/bootstrap/stylesheets/app/app.css
+++ b/bootstrap/stylesheets/app/app.css
@@ -100,6 +100,10 @@ body {
         color: #fff;
       }
       
+      .footer {
+        color: #fff;
+      }
+      
 /* -----------------------------------------
    faq.html
 ----------------------------------------- */
