--- a/bootstrap/stylesheets/app/bootstrap.css
+++ b/bootstrap/stylesheets/app/bootstrap.css
@@ -4019,6 +4019,7 @@ input[type="submit"].btn.btn-mini {
 .nav-tabs,
 .nav-pills {
   *zoom: 1;
+
 }
 
 .nav-tabs:before,
@@ -4037,7 +4038,7 @@ input[type="submit"].btn.btn-mini {
 
 .nav-tabs > li,
 .nav-pills > li {
-  float: left;
+  float: right;
 }
 
 .nav-tabs > li > a,
