more unifcation across foundation and boostrap.

--- a/bootstrap/stylesheets/app/app.css
+++ b/bootstrap/stylesheets/app/app.css
@@ -104,6 +104,9 @@ body {
         color: #fff;
       }
       
+      .span4 h2 {
+        font-size: 18px;
+      }
 /* -----------------------------------------
    faq.html
 ----------------------------------------- */
