--- a/foundation/stylesheets/app/app.css
+++ b/foundation/stylesheets/app/app.css
@@ -35,8 +35,8 @@ body {
   font-size: 18px;
 }
 
-. {
-  color: #fff;
+p.tagline {
+  font-size: 20px;
 }
 
 /* -----------------------------------------
