created bootstrap/app/faq.css file to mimick certain features of the faq page from foundation. Finished bootstrap/faq.html

--- a/bootstrap/stylesheets/app/app.css
+++ b/bootstrap/stylesheets/app/app.css
@@ -110,8 +110,13 @@ body {
 /* -----------------------------------------
    faq.html
 ----------------------------------------- */
+
 .faq-content {
   color: #fff; 
+}
+
+.faq-content h3 {
+  color: #fff;
 }
 
 .faq-content h3 small {
