--- a/foundation/stylesheets/app/app.css
+++ b/foundation/stylesheets/app/app.css
@@ -21,10 +21,6 @@ body {
 /* -----------------------------------------
    Page Name 1
 ----------------------------------------- */
-p.upper-banner {
-  float: right;
-}
-
 .columns {
   
 }
@@ -46,9 +42,17 @@ p.tagline {
   font-size: 20px;
 }
 
+p.lower-banner {
+  float: right;
+}
+
 /* -----------------------------------------
    Page Name 2
 ----------------------------------------- */
+.body {
+  font-family: 'Junge', serif;
+}
+
 p.upper-banner {
   float: right;
 }
@@ -80,7 +84,7 @@ p.faq-font {
   white-space:nowrap;
 }
 
-.images {
+.text-wrapped-image {
   width: 172px;
   height: 242px;
   float: left;
